platform/addons/istio/examples/sample-gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sample-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.example.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-vs
  namespace: istio-system
spec:
  hosts:
  - app.example.com
  gateways:
  - sample-gateway
  http:
  - route:
    - destination:
        host: myapp.default.svc.cluster.local
        port:
          number: 80
